<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/stock_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backfon"
    tools:context=".StockMenuActivity">

    <TextView
        android:id="@+id/txt_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_stock_menu"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_area_private"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <TextView
        android:id="@+id/txt_area_private"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:text="@string/txt_private_area"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <Button
        android:id="@+id/tools_my"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:layout_marginBottom="480dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_my_tools"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/tools_in_stock"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:layout_marginBottom="388dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_tools_in_stock"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/tools_issued"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:layout_marginBottom="292dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_issued_tools"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/tools_order_desk"
        android:layout_width="302dp"
        android:layout_height="62dp"
        android:layout_marginBottom="196dp"
        android:backgroundTint="@color/green"
        android:text="@string/btn_order_desk"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>