<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backfon"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="640dp"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/flag_uk"
            android:layout_width="48dp"
            android:layout_height="33dp"
            android:layout_marginTop="119dp"
            android:layout_marginBottom="579dp"
            android:contentDescription="@string/en"
            android:src="@drawable/ic_fl_uk"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/flag_ua"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/flag_ua"
            android:layout_width="48dp"
            android:layout_height="33dp"
            android:layout_marginTop="119dp"
            android:layout_marginBottom="561dp"
            android:contentDescription="@string/ua"
            android:src="@drawable/ic_fl_ua"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/flag_it"
            android:layout_width="48dp"
            android:layout_height="33dp"
            android:layout_marginTop="119dp"
            android:layout_marginBottom="579dp"
            android:contentDescription="@string/it"
            android:src="@drawable/ic_fl_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/flag_ua"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="35dp"
            android:autofillHints="number"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_phone"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/enter_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flag_ua"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.75" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="50dp"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/main_btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintWidth_percent="0.75" />

        <Button
            android:id="@+id/main_btn_login"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="70dp"
            android:backgroundTint="@color/green"
            android:text="@string/btn_txt"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textRegistration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/textRegistration"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="168dp"
            android:text="@string/textRegistration"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="80dp"
            android:text="@string/textForgotPassword"
            android:textColor="@color/green"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>