<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backfon"
        tools:context=".ForgotPasswordActivity">

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="640dp"
            android:text="@string/forgot_password_txt"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/txt_new_password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.408"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forgot_password"
            app:layout_constraintVertical_bias="0.083"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/txt_repeat_password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:hint="@string/repeat_new_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forgot_password"
            app:layout_constraintVertical_bias="0.252"
            app:layout_constraintWidth_percent="0.9"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/txt_number"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:autofillHints="phone_number"
            android:background="@color/green_grey_dark"
            android:hint="@string/forgot_phone_number"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forgot_password"
            app:layout_constraintVertical_bias="0.447"
            app:layout_constraintWidth_percent="0.9" />

        <Button
            android:id="@+id/btn_getPassword"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/green"
            android:text="@string/txt_getPassword"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.715"
            app:layout_constraintWidth_percent="0.75" />

        <Button
            android:id="@+id/btn_backToMain"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/green"
            android:text="@string/txt_backToMain"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.875"
            app:layout_constraintWidth_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>